# Terllama

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  install.ps1  install.sh  registry.json  uninstall.ps1  uninstall.sh
.github/workflows/: ci.yml  desktop-release.yml
.opencode/: progress-terllama-als-extra.md  progress-v1.0.0-desktop.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONVERSION.md
legacy/: avx512_benchmark.cpp  benchmark_coalesced.cpp  full_inference.cpp  inference.cpp
scripts/: decode_helper.py  export_ternary_model_bitnet.py  pack_weights.py  tokenize_helper.py
src/: benchmark.cpp  dispatcher.cpp  downloader.cpp  gguf_loader.cpp  gguf_loader.h  inference.h  kernel_avx2.cpp  kernel_decl.h  kernel_dispatch.h  kernel_neon.cpp  kernel_scalar.cpp  loader.h  main.cpp  model.h  server.cpp
src/cli/: commands.cpp  commands.h
src/core/: inference.cpp  logger.cpp  logger.h  tokenizer.cpp  tokenizer.h
src/server/: handlers.cpp  handlers.h
terllama-desktop/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
terllama-desktop/src/: App.svelte  app.css  app.html  types.ts
terllama-desktop/src-tauri/: Cargo.toml  tauri.conf.json
terllama-desktop/src-tauri/capabilities/: default.json
terllama-desktop/src-tauri/src/: commands.rs  config.rs  download.rs  main.rs  server.rs
terllama-desktop/src/lib/components/: ChatMessage.svelte  DownloadDialog.svelte  ModelCard.svelte  Onboarding.svelte  SettingsToggle.svelte  Sidebar.svelte
terllama-desktop/src/lib/stores/: chat.ts  models.ts  settings.ts
terllama-desktop/src/routes/: +layout.svelte  +page.svelte
terllama-desktop/src/routes/chat/: +page.svelte
terllama-desktop/src/routes/settings/: +page.svelte
tests/: CMakeLists.txt  test_inference.cpp  test_kernels.cpp
web/: index.html
